# tecnoballz

tecnoballz/: AUTHORS  CHANGES  Makefile.am  Makefile.in  README  bootstrap  config.h  config.h.in  configure  configure.ac  configure.in  tecnoballz.6  tecnoballz.hi
tecnoballz/amiga_version/TecnoballZ/: TecnoballZ.exe.info  TecnoballZ.text  TecnoballZ.text.info
tecnoballz/amiga_version/TecnoballZ/Gfx/: font_messa.ilbm  font_money.ilbm  font_score.ilbm  font_zgame.ilbm  font_zmenu.ilbm  page_zbobs.ilbm  pal_60maps.list  pal_gmover.ilbm  pal_winner.ilbm  pal_zelogo.ilbm  pal_zemenu.ilbm  pp_60-maps.ilbm  pp_anihead.ilbm  pp_bscores.ilbm  pp_bumper1.ilbm  pp_bumper2.ilbm  pp_ggblitz.ilbm  pp_mapedit.ilbm  pp_newshop.ilbm  pp_sharwar.ilbm  pp_zebrick.ilbm
tecnoballz/amiga_version/TecnoballZ/Mod/: mod.area1-game  mod.area2-game  mod.area3-game  mod.area4-game  mod.area5-game  mod.gardien-go  mod.high-score  mod.over-theme  mod.tecno-winn  mod.tecnoballz
tecnoballz/amiga_version/TecnoballZ/Raw/: cosinus128.list  cosmicbaby.list  gard_lissa.list  pp_edmap01.data  pp_edmap02.data  pp_edmap03.data  pp_tableau.data  scrolltext.asci  sound_game.data  sound_game.raw  tableaux00.data
tecnoballz/amiga_version/src_68020/Include/: TecnoballZ.s  hiscore.s  scroll.text.s
tecnoballz/amiga_version/src_68020/Include/Data/: Constantes.s  Sprites.Data.s  atom_data.s  balle_data.s  blitz.data.s  bobtext_data.s  brick.data.s  bricote.data.s  bump_data.s  capsule.data.s  color_data.s  editor_data.s  fire_data.s  gadget.data.s  gameover.data.s  gemme_data.s  head_data.s  joueur.data.s  level_data.s  menu.data.s  mur_data.s  oeil_data.s  print_data.s  shadow_data.s
tecnoballz/amiga_version/src_68020/Include/Dive/: Macro.s  SCORE.s  hasard_ok.s  mouse_buttons.s  page_information.s  pertedememoire.s  quit.s  sys_extra.s  triscore.s  vbl_clavier.s
tecnoballz/amiga_version/src_68020/Include/Gard/: affiche_dalles.s  elegy.s  gardien.data.s  gardien.init.s  gere_scroll.s  init.sc_mapadr.s  last_flip.s  last_missile.s  last_move.s  last_scroll.s  last_test_souris.s  last_vitus.s  parametres2.s
tecnoballz/amiga_version/src_68020/Include/Gfx1/: bob32.gfx.s  choucroutte.s  choupette.s  gestion_mur.s  msx.s  shado.gfx.s  shado_affiche.s  shado_restore.s  tbob.s  total_recal.s
tecnoballz/amiga_version/src_68020/Include/Init/: init_atom.s  init_balle.s  init_blitz.s  init_bobtext.s  init_bricks.s  init_bricotes.s  init_capsule.s  init_degrade.s  init_eject.s  init_fond.s  init_gadget.s  init_gemme.s  init_head.s  init_level.s  init_mur.s  init_objet.s  init_oeil.s  init_rak.s  init_score.s  install_ecran.s  shado.ajoute.s  shado_initbob.s  shadox.s
tecnoballz/amiga_version/src_68020/Include/Joue/: firstplayer.s  init_players.s  marauder.s  nextplayer.s  playerlive.s  pointeplayer.s  raton_laveur.s  recopie_noms.s  super_famicom.s  xcopy.s
tecnoballz/amiga_version/src_68020/Include/Move/: add_gemme.s  atom_collision1.s  atom_collision2.s  atom_dep.s  bob_anim.s  bp_depl1.s  bump_bump.s  chunky.s  clear_allbricks.s  fire.color.s  fire_bricks.s  gad_re.s  gadget_dep.s  gadgets.s  gere_balle.s  gere_robot.s  gestion_gemme.s  gestion_oeil.s  lache_balle.s  laser.s  mouse_blitz.s  mouse_fire.s  msdos_beurk.s  no_dream2.s  no_what.s  tilt.s  tir_deplacement.s  yes_what.s
tecnoballz/amiga_version/src_68020/Include/Play/: black.s  interupt0.s  interupt1.s  interupt14.s  interupt15.s  interupt2.s  interupt3.s  interupt4.s  interupt5.s  level_plus.s  mega_over1.s  mega_over2.s  menu.init.s  menu.run.s  over1.s  over2.s  propaganda.s  star.s
tecnoballz/amiga_version/src_68020/Include/Prnt/: init_message.s  init_print.s  jconvert.s  mess.data.s  no_dream1.s  print_box.s  print_bricks.s  pub1.s  (+9 more)
tecnoballz/amiga_version/src_68020/Mentat/: Mentat.s  Mentat.s.info  Projects.info
tecnoballz/include/: BOB_killer.h  GFX_bitmap.h  GIF_bitMap.h  RAM_killer.h  audiomixer.h  ballDirect.h  barreScore.h  bitmap_data.h  briqueCote.h  clavierMac.h  configfile.h  controller_balls.h  controller_bricks.h  controller_bullets.h  controller_capsules.h  controller_ejectors.h  controller_explosions.h  controller_font_game.h  controller_font_menu.h  controller_fontes_game.h  controller_fontes_menu.h  controller_game_over.h  controller_gems.h  controller_gigablitz.h  controller_guardians.h  controller_indicators.h  controller_magnetic_eyes.h  controller_moneys.h  controller_paddles.h  controller_projectiles.h  controller_ships.h  controller_sides_bricks.h  controller_spheres.h  controller_viewfinders.h  display_text_bitmap.h  ecran_hard.h  ejectBalls.h  escapeMenu.h  fond_ecran.h  gard_tecno.h  (+99 more)
tecnoballz/man/: tecnoballz.1  tecnoballz.fr.1
tecnoballz/src/: BOB_killer.cc  GFX_bitmap.cc  GIF_bitMap.cc  Makefile  Makefile.am  Makefile.gp2x  Makefile.psp  RAM_killer.cc  audiomixer.cc  ballDirect.cc  barreScore.cc  bitmap_data.cc  briqueCote.cc  clavierMac.cc  configfile.cc  controller_balls.cc  controller_bricks.cc  controller_bullets.cc  controller_capsules.cc  controller_ejectors.cc  controller_explosions.cc  controller_font_game.cc  controller_font_menu.cc  controller_fontes_game.cc  controller_fontes_menu.cc  controller_game_over.cc  controller_gems.cc  controller_gigablitz.cc  controller_guardians.cc  controller_indicators.cc  controller_magnetic_eyes.cc  controller_moneys.cc  controller_paddles.cc  controller_projectiles.cc  controller_ships.cc  controller_sides_bricks.cc  controller_spheres.cc  controller_viewfinders.cc  display_text_bitmap.cc  ecran_hard.cc  (+101 more)
tecnoballz/src/TecnoballZ/: Makefile.am  levels-data.xml  tilemap-congratulation_40.data  tilemap-menu_20.data  tilemap-menu_40.data
tecnoballz/src/TecnoballZ/hires/: Makefile.am
tecnoballz/src/TecnoballZ/lores/: Makefile.am
tecnoballz/src/TecnoballZ/musics/: Makefile.am
tecnoballz/src/TecnoballZ/sounds/: Makefile.am
tecnoballz/src/TecnoballZ/texts/: main_menu_en.txt  main_menu_fr.txt  popup_menu_en.txt  popup_menu_fr.txt  shop_en.txt  shop_fr.txt  short_info_messages_en.txt  short_info_messages_fr.txt
tecnoballz/src/TecnoballZ/textures/: Makefile.am
(+151 files in other folders)
