#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

#AC_DEFINE_UNQUOTED([DATADIR], ["${datadir}"], [Define to the data directory.])
AC_DEFINE([DATADIR], ["/usr/local/share/tecnoballz"], [Define to the data directory.])


##############################################################
# Libraries checks
#############################################################

# XLIB_LIBS="-L/usr/X11R6/lib -lXext"

#
# The Xlib
#
X_LIBS="-L/usr/X11R6/lib -lX11 -lXext"
XLIB_CFLAGS="-I/usr/X11R6/includes"
AC_PATH_X
AC_SUBST(XLIB_CFLAGS)
AC_SUBST(X_LIBS)

#
# The multimedia libs
#
MM_LIBS=""

AC_CHECK_LIB(vorbisfile, ov_raw_seek, [
	MM_LIBS="${MM_LIBS} -lvorbisfile"
],[
	AC_MSG_ERROR(Could not find the vorbisfile lib : -lvorbisfile)
])
AC_CHECK_LIB(ogg, ogg_stream_packetin, [
	MM_LIBS="${MM_LIBS} -logg"
],[
	AC_MSG_ERROR(Could not find the ogg lib : -logg)
])
AC_CHECK_LIB(smpeg, SMPEG_play, [
	MM_LIBS="${MM_LIBS} -lsmpeg"
],[
	AC_MSG_ERROR(Could not find the smpeg lib : -lsmpeg)
])

# 
# the SDL lib
#
SDL_LIBS=""
SDL_FLAGS=""

AC_CHECK_LIB(SDL, SDL_Init, [
  SDL_LIBS="${SDL_LIBS} -lSDL"
],[
  AC_MSG_ERROR(Could not find the SDL library : -lSDL)
])
AC_CHECK_LIB(SDL_mixer, Mix_GetChunk, [
  SDL_LIBS="${SDL_LIBS} -lSDL_mixer"
],[
  AC_MSG_ERROR(Could not find the SDL Mixer library : -lSDL_mixer)
])

#
# The MikMod lib
#
MIKMOD_LIBS=""
MIKMOD_FLAGS=""

AC_CHECK_LIB(mikmod, Player_Stop, [
	MIKMOD_LIBS="-lmikmod"
	MIKMOD_FLAGS="-pthread -D_REENTRANT"
],[
	AC_MSG_ERROR(Could not find the Mikmod library : -lmikmod)
])

#
# Basic libs
#
BASE_LIBS=""

AC_CHECK_LIB(m, asin, [
	BASE_LIBS="${BASE_LIBS} -lm"
],[
	AC_MSG_ERROR(Could not find the math lib : -lm)
])
AC_CHECK_LIB(dl, dlopen, [
	BASE_LIBS="${BASE_LIBS} -ldl"
],[
	AC_MSG_ERROR(Could not find the dl lib : -ldl)
])
AC_CHECK_LIB(pthread, pthread_attr_destroy, [
	BASE_LIBS="${BASE_LIBS} -lpthread"
],[
	AC_MSG_ERROR(Could not find the pthread lib : -lpthread)
])


# Let's do some architecture detection
case `uname -m` in
	i686) 
		CFLAGS="-O3" ;;
	i586) 
		CFLAGS="-O3" ;;
	i486) 
		CFLAGS="-O3" ;;
	i386) 
		CFLAGS="-O3" ;;
	sparc64) 
		CFLAGS="-O3" ;;
	*)
		CFLAGS="-O3" ;;
esac

# global libs and flags
LDFLAGS="${LDFLAGS} ${X_LIBS} ${MM_LIBS} ${BASE_LIBS} ${SDL_LIBS} ${MIKMOD_LIBS}"
LIBS="${LIBS} -L/usr/lib"
CFLAGS="${CFLAGS} -Wall ${MIKMOD_FLAGS} ${XLIB_CFLAGS} ${SDL_FLAGS}"

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([strdup strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

