NULL =
pkgdatadir = $(datadir)/tecnoballz/hires
dist_pkgdata_DATA = \
	all_sprites.bmp \
	bricks.bmp \
	font_score.bmp \
	game_fonts.bmp \
	gigablitz.bmp \
	head_animation.bmp \
	menu_fonts.bmp \
	paddles_1.bmp \
	paddles_2.bmp \
	right_panel.bmp \
	shop.bmp \
	small_fonts.bmp \
	tilesmap.bmp \
	$(NULL)
