NULL =
pkgdatadir = $(datadir)/tecnoballz/textures
dist_pkgdata_DATA = \
	map01.bmp \
	map02.bmp \
	map03.bmp \
	map04.bmp \
	map05.bmp \
	map06.bmp \
	map07.bmp \
	map08.bmp \
	map09.bmp \
	map10.bmp \
	map11.bmp \
	map12.bmp \
	map13.bmp \
	map14.bmp \
	map15.bmp \
	map16.bmp \
	map17.bmp \
	map18.bmp \
	map19.bmp \
	map20.bmp \
	map21.bmp \
	map22.bmp \
	map23.bmp \
	map24.bmp \
	map25.bmp \
	map26.bmp \
	map27.bmp \
	map28.bmp \
	map29.bmp \
	map30.bmp \
	map31.bmp \
	map32.bmp \
	map33.bmp \
	map34.bmp \
	map35.bmp \
	map36.bmp \
	map37.bmp \
	map38.bmp \
	map39.bmp \
	map40.bmp \
	map41.bmp \
	map42.bmp \
	map43.bmp \
	map44.bmp \
	map45.bmp \
	map46.bmp \
	map47.bmp \
	map48.bmp \
	map49.bmp \
	map50.bmp \
	map51.bmp \
	map52.bmp \
	map53.bmp \
	map54.bmp \
	map55.bmp \
	map56.bmp \
	map57.bmp \
	map58.bmp \
	map59.bmp \
	map60.bmp \
	map61.bmp \
	map62.bmp \
	map63.bmp \
	map64.bmp \
	map65.bmp \
	map66.bmp \
	map67.bmp \
	map68.bmp \
	map69.bmp \
	map70.bmp \
	map71.bmp \
	map72.bmp \
	map73.bmp \
	map74.bmp \
	map75.bmp \
	map76.bmp \
	map77.bmp \
	map78.bmp \
	$(NULL)
